==> nopnop2002/esp-idf-si4432/components/si4432/si4432.c <==
#include <string.h>
#include <math.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/queue.h"
#include <driver/spi_master.h>
#include <driver/gpio.h>
#include "esp_log.h"
#include "si4432.h"
#define TAG "SI4432"
#define HOST_ID SPI2_HOST
#define HOST_ID SPI3_HOST
#define MAX_TRANSMIT_TIMEOUT 200
#define delayMicroseconds(microsec) esp_rom_delay_us(microsec)
#define delay(millsec) esp_rom_delay_us(millsec*1000)
#define millis() xTaskGetTickCount()*portTICK_PERIOD_MS

bool init() {
	ESP_LOGI(TAG, "CONFIG_SEL_GPIO=%d", CONFIG_SEL_GPIO); // SPI CS
	ESP_LOGI(TAG, "CONFIG_SDN_GPIO=%d", CONFIG_SDN_GPIO); // Shutdown Input
	ESP_LOGI(TAG, "CONFIG_IRQ_GPIO=%d", CONFIG_IRQ_GPIO); // IRQ Output

	_freqCarrier = 433000000;
	_freqChannel = 0;
	_kbps = 100;
	_packageSign = 0xDEAD;

	gpio_reset_pin(CONFIG_IRQ_GPIO);
	gpio_set_direction(CONFIG_IRQ_GPIO, GPIO_MODE_INPUT);

	gpio_reset_pin(CONFIG_SDN_GPIO);
	gpio_set_direction(CONFIG_SDN_GPIO, GPIO_MODE_OUTPUT);
	turnOff();

	spi_init();
	ESP_LOGI(TAG, "SPI is initialized now.");

	hardReset();

	// Check Sync Word
	byte syncWord3 = ReadRegister(REG_SYNC_WORD3);
	byte syncWord2 = ReadRegister(REG_SYNC_WORD2);
	byte syncWord1 = ReadRegister(REG_SYNC_WORD1);
	byte syncWord0 = ReadRegister(REG_SYNC_WORD0);
	ESP_LOGI(TAG,"syncWord3=%x, syncWord2=%x, syncWord1=%x, syncWord0=%x", syncWord3, syncWord2, syncWord1, syncWord0);
	
	if (syncWord3 != 0x2D || syncWord2 != 0xD4) return false;
	return true;
}

bool sendPacket(uint8_t length, const byte* data) {

	clearTxFIFO();
	ChangeRegister(REG_PKG_LEN, length);

	BurstWrite(REG_FIFO, data, length);

	ChangeRegister(REG_INT_ENABLE1, 0x04); // set interrupts on for package sent
	ChangeRegister(REG_INT_ENABLE2, 0x00); // set interrupts off for anything else
	//read interrupt registers to clean them
	ReadRegister(REG_INT_STATUS1);
	ReadRegister(REG_INT_STATUS2);

	switchMode(TXMode | Ready);

	uint64_t enterMillis = millis();
 
	while (millis() - enterMillis < MAX_TRANSMIT_TIMEOUT) {

		//if ((CONFIG_IRQ_GPIO != 0) && (gpio_get_level(CONFIG_IRQ_GPIO) != 0)) {
		if (gpio_get_level(CONFIG_IRQ_GPIO) != 0) {
			vTaskDelay(1);
			continue;
		}

		byte intStatus = ReadRegister(REG_INT_STATUS1);
		//ReadRegister(REG_INT_STATUS2);
		ESP_LOGD(TAG,"sendPacket REG_INT_STATUS1=0x%x", intStatus);
		
		//if (intStatus & 0x04) { // Packet Sent Interrupt
		if ( (intStatus & 0x04) == 0x04 || (intStatus & 0x20) == 0x20) { // TX FIFO Almost Empty.
			switchMode(Ready | TuneMode);
			//softReset(); // nop
			return true;
		} // endif
		vTaskDelay(1);
	} // end while

	//timeout occurred.
	ESP_LOGW(TAG, "Timeout in Transit -- ");
#if 0
	switchMode(Ready);

	if (ReadRegister(REG_DEV_STATUS) & 0x80) {
		clearFIFO();
	}
#endif

	hardReset(); // nop

	return false;
}

void switchMode(byte mode) {
	ESP_LOGD(TAG,"switchMode mode=0x%x", mode);
	ChangeRegister(REG_STATE, mode);
}

void setBaudRate(uint16_t kbps) {

	// chip normally supports very low bps values, but they are cumbersome to implement - so I just didn't implement lower bps values
	if ((kbps > 256) || (kbps < 1))
		return;
	_kbps = kbps;

	byte freqDev = kbps <= 10 ? 15 : 150;		// 15khz / 150 khz
	byte modulationValue = _kbps < 30 ? 0x4c : 0x0c;		// use FIFO Mode, GFSK, low baud mode on / off

	byte modulationVals[] = { modulationValue, 0x23, round((freqDev * 1000.0) / 625.0) }; // msb of the kpbs to 3rd bit of register
	BurstWrite(REG_MODULATION_MODE1, modulationVals, 3); // 0x70

	// set data rate
	uint16_t bpsRegVal = round((kbps * (kbps < 30 ? 2097152 : 65536.0)) / 1000.0);
	byte datarateVals[] = { bpsRegVal >> 8, bpsRegVal & 0xFF };

	BurstWrite(REG_TX_DATARATE1, datarateVals, 2); // 0x6E

	//now set the timings
	uint16_t minBandwidth = (2 * (uint32_t) freqDev) + kbps;
	ESP_LOGD(TAG,"min Bandwidth value: 0x%x", minBandwidth);
	byte IFValue = 0xff;
	//since the table is ordered (from low to high), just find the 'minimum bandwidth which is greater than required'
	for (byte i = 0; i < 8; ++i) {
		if (IFFilterTable[i][0] >= (minBandwidth * 10)) {
			IFValue = IFFilterTable[i][1];
			break;
		}
	}
	ESP_LOGD(TAG,"Selected IF value: 0x%x", IFValue);

	ChangeRegister(REG_IF_FILTER_BW, IFValue);

	byte dwn3_bypass = (IFValue & 0x80) ? 1 : 0; // if msb is set
	byte ndec_exp = (IFValue >> 4) & 0x07; // only 3 bits

	uint16_t rxOversampling = round((500.0 * (1 + 2 * dwn3_bypass)) / ((pow(2, ndec_exp - 3)) * (double ) kbps));

	uint32_t ncOffset = ceil(((double) kbps * (pow(2, ndec_exp + 20))) / (500.0 * (1 + 2 * dwn3_bypass)));

	uint16_t crGain = 2 + ((65535 * (int64_t) kbps) / ((int64_t) rxOversampling * freqDev));
	byte crMultiplier = 0x00;
	if (crGain > 0x7FF) {
		crGain = 0x7FF;
	}
	ESP_LOGD(TAG,"dwn3_bypass value: 0x%x", dwn3_bypass);
	ESP_LOGD(TAG,"ndec_exp value: 0x%x", ndec_exp);
	ESP_LOGD(TAG,"rxOversampling value: 0x%x", rxOversampling);
	ESP_LOGD(TAG,"ncOffset value: 0x%x", ncOffset);
	ESP_LOGD(TAG,"crGain value: 0x%x", crGain);
	ESP_LOGD(TAG,"crMultiplier value: 0x%x", crMultiplier);

	byte timingVals[] = { rxOversampling & 0x00FF, ((rxOversampling & 0x0700) >> 3) | ((ncOffset >> 16) & 0x0F),
			(ncOffset >> 8) & 0xFF, ncOffset & 0xFF, ((crGain & 0x0700) >> 8) | crMultiplier, crGain & 0xFF };

	BurstWrite(REG_CLOCK_RECOVERY_OVERSAMPLING, timingVals, 6);

}

void BurstWrite(Registers startReg, const byte value[], uint8_t length) {

	byte regVal = (byte) startReg | 0x80; // set MSB

	gpio_set_level(CONFIG_SEL_GPIO, 0);
	spi_transfer(regVal);

	for (byte i = 0; i < length; ++i) {
		ESP_LOGD(TAG,"Writing: %x | %x", (regVal != 0xFF ? (regVal + i) & 0x7F : 0x7F), value[i]);
		spi_transfer(value[i]);
	}

	gpio_set_level(CONFIG_SEL_GPIO, 1);
}

void BurstRead(Registers startReg, byte value[], uint8_t length) {

	byte regVal = (byte) startReg & 0x7F; // clear MSB

	gpio_set_level(CONFIG_SEL_GPIO, 0);
	spi_transfer(regVal);

	for (byte i = 0; i < length; ++i) {
		value[i] = spi_transfer(0xFF);
		ESP_LOGD(TAG,"Reading: %x | %x", (regVal != 0x7F ? (regVal + i) & 0x7F : 0x7F), value[i]);
	}

	gpio_set_level(CONFIG_SEL_GPIO, 1);
}

void readAll() {

	byte allValues[0x7F];

	BurstRead(REG_DEV_TYPE, allValues, 0x7F);

	for (byte i = 0; i < 0x7f; ++i) {
		ESP_LOGI(TAG,"REG(%x) : %x", REG_DEV_TYPE + i, allValues[i]);
	}

}

bool isPacketReceived() {

	//if ((CONFIG_IRQ_GPIO != 0) && (gpio_get_level(CONFIG_IRQ_GPIO) != 0)) {
	if (gpio_get_level(CONFIG_IRQ_GPIO) != 0) {
		return false; // if no interrupt occurred, no packet received is assumed (since startListening will be called prior, this assumption is enough)
	}

	// check for package received status interrupt register
	byte intStat = ReadRegister(REG_INT_STATUS1);
	ESP_LOGD(TAG,"isPacketReceived REG_INT_STATUS1=0x%x", intStat);

#ifdef DEBUG
	byte intStat2 = ReadRegister(REG_INT_STATUS2);

	if (intStat2 & 0x40) { //interrupt occurred, check it && read the Interrupt Status1 register for 'preamble '

		ESP_LOGI(TAG,"HEY!! HEY!! Valid Preamble detected -- 0x%x", intStat2);

	}

	if (intStat2 & 0x80) { //interrupt occurred, check it && read the Interrupt Status1 register for 'preamble '

		ESP_LOGI(TAG,"HEY!! HEY!! SYNC WORD detected -- 0x%x", intStat2);

	}
#endif

	if (intStat & 0x02) { //interrupt occurred, check it && read the Interrupt Status1 register for 'valid packet'
		switchMode(Ready | TuneMode); // if packet came, get out of Rx mode till the packet is read out. Keep PLL on for fast reaction
		ESP_LOGD(TAG,"Packet detected -- 0x%x", intStat);
		return true;
	} else if (intStat & 0x01) { // packet crc error
		switchMode(Ready); // get out of Rx mode till buffers are cleared
		ESP_LOGW(TAG,"CRC Error in Packet detected!-- 0x%x", intStat);
		clearRxFIFO();
		switchMode(RXMode | Ready); // get back to work
		return false;
	}

	//no relevant interrupt? no packet!

	return false;
}

void turnOn() {
	gpio_set_level(CONFIG_SDN_GPIO, 0);
	vTaskDelay(1);
}

void turnOff() {
	gpio_set_level(CONFIG_SDN_GPIO, 1);
	vTaskDelay(1);
}
